@@ -20,25 +20,24 @@ import org.palladiosimulator.pcm.repository.ProvidedRole;
 import org.palladiosimulator.pcm.repository.Repository;
 import org.palladiosimulator.pcm.repository.RepositoryComponent;
 import org.palladiosimulator.pcm.resourceenvironment.ResourceContainer;
-import org.palladiosimulator.solver.models.PCMInstance;
 import org.palladiosimulator.pcm.system.System;
+import org.palladiosimulator.solver.models.PCMInstance;
 
 import FeatureCompletionModel.ComplementumVisnetis;
 import FeatureCompletionModel.CompletionComponent;
 import FeatureCompletionModel.FeatureCompletion;
+import de.uka.ipd.sdq.dsexplore.tools.stereotypeapi.EMFProfileFilter;
+import de.uka.ipd.sdq.dsexplore.tools.stereotypeapi.EcoreReferenceResolver;
+import de.uka.ipd.sdq.dsexplore.tools.stereotypeapi.StereotypeAPIHelper;
 import de.uka.ipd.sdq.pcm.designdecision.Choice;
 import de.uka.ipd.sdq.pcm.designdecision.FeatureChoice;
 import de.uka.ipd.sdq.pcm.designdecision.specific.FeatureDegree;
-import edu.kit.ipd.are.dsexplore.concern.emfprofilefilter.ComponentsToBeWovenFilter;
-import edu.kit.ipd.are.dsexplore.concern.emfprofilefilter.EMFProfileFilter;
 import edu.kit.ipd.are.dsexplore.concern.exception.ConcernWeavingException;
 import edu.kit.ipd.are.dsexplore.concern.exception.ErrorMessage;
 import edu.kit.ipd.are.dsexplore.concern.handler.FCCFeatureHandler;
 import edu.kit.ipd.are.dsexplore.concern.manager.FeatureCompletionManager;
 import edu.kit.ipd.are.dsexplore.concern.manager.PcmSystemManager;
-import edu.kit.ipd.are.dsexplore.concern.util.EcoreReferenceResolver;
 import edu.kit.ipd.are.dsexplore.concern.util.Pair;
-import edu.kit.ipd.are.dsexplore.concern.util.StereotypeApiHelper;
 import edu.kit.ipd.are.dsexplore.concern.util.WeavingInstructionBuilder;
 import featureObjective.Feature;
 import featureSolution.InclusionMechanism;
@@ -72,10 +71,8 @@ public class WeavingInstructionGenerator {
 	 *            - The concern solution realizing a concern.
 	 * @return a WeavingInsztructiongenerator-instance
 	 */
-	public static WeavingInstructionGenerator getInstanceBy(PCMInstance pcmInstance, FeatureCompletion fc,
-			Repository mergedRepo) {
-		WeavingInstructionGenerator.initialize(pcmInstance, fc, mergedRepo,
-				new HashMap<CompletionComponent, ResourceContainer>());
+	public static WeavingInstructionGenerator getInstanceBy(PCMInstance pcmInstance, FeatureCompletion fc, Repository mergedRepo) {
+		WeavingInstructionGenerator.initialize(pcmInstance, fc, mergedRepo, new HashMap<CompletionComponent, ResourceContainer>());
 		return WeavingInstructionGenerator.instance;
 	}
 
@@ -94,14 +91,13 @@ public class WeavingInstructionGenerator {
 	 *            suppose to be allocated.
 	 * @return a WeavingInsztructiongenerator-instance
 	 */
-	public static WeavingInstructionGenerator getInstanceBy(PCMInstance pcmInstance, FeatureCompletion fc,
-			Repository mergedRepo, Map<CompletionComponent, ResourceContainer> eccToResourceContainerMap) {
+	public static WeavingInstructionGenerator getInstanceBy(PCMInstance pcmInstance, FeatureCompletion fc, Repository mergedRepo,
+			Map<CompletionComponent, ResourceContainer> eccToResourceContainerMap) {
 		WeavingInstructionGenerator.initialize(pcmInstance, fc, mergedRepo, eccToResourceContainerMap);
 		return WeavingInstructionGenerator.instance;
 	}
 
-	private static void initialize(PCMInstance pcmInstance, FeatureCompletion fc, Repository mergedRepo,
-			Map<CompletionComponent, ResourceContainer> eccToResourceContainerMap) {
+	private static void initialize(PCMInstance pcmInstance, FeatureCompletion fc, Repository mergedRepo, Map<CompletionComponent, ResourceContainer> eccToResourceContainerMap) {
 		if (WeavingInstructionGenerator.instance == null) {
 			WeavingInstructionGenerator.instance = new WeavingInstructionGenerator();
 		}
@@ -124,13 +120,11 @@ public class WeavingInstructionGenerator {
 	 *             - Will be thrown if an error occurs during the generation of
 	 *             the weaving instructions.
 	 */
-	public List<WeavingInstruction> getWeavingInstructions(List<Pair<FeatureDegree, Choice>> optChoice)
-			throws ConcernWeavingException {
+	public List<WeavingInstruction> getWeavingInstructions(List<Pair<FeatureDegree, Choice>> optChoice) throws ConcernWeavingException {
 		System pcmSystem = this.pcmInstance.getSystem();
-		List<Repository> pcmSolutionRepository = StereotypeApiHelper.getViaStereoTypeFrom(pcmSystem, Repository.class);
+		List<Repository> pcmSolutionRepository = StereotypeAPIHelper.getViaStereoTypeFrom(pcmSystem, Repository.class);
 		try {
-			List<Pair<ComplementumVisnetis, WeavingLocation>> targetLocs = this
-					.getWeavingLocationsFrom(this.getTargetAnnotatedElementPairs(pcmSolutionRepository));
+			List<Pair<ComplementumVisnetis, WeavingLocation>> targetLocs = this.getWeavingLocationsFrom(this.getTargetAnnotatedElementPairs(pcmSolutionRepository));
 			List<WeavingInstruction> instructions = new ArrayList<>();
 			for (Pair<ComplementumVisnetis, WeavingLocation> targetLoc : targetLocs) {
 				instructions.add(this.generate(targetLoc, pcmSolutionRepository));
@@ -138,7 +132,7 @@ public class WeavingInstructionGenerator {
 			this.applyOptionalAsDegree(optChoice, instructions);
 			return instructions;
 		} catch (Exception ex) {
-			// TODO HERE Exception ... :(
+			// Exception ... :(
 			throw new ConcernWeavingException(ex.getMessage());
 		}
 
@@ -154,8 +148,7 @@ public class WeavingInstructionGenerator {
 	 *            the {@link WeavingInstruction WeavingInstructions}
 	 * @author Dominik Fuchss
 	 */
-	private void applyOptionalAsDegree(List<Pair<FeatureDegree, Choice>> optChoice,
-			List<WeavingInstruction> instructions) {
+	private void applyOptionalAsDegree(List<Pair<FeatureDegree, Choice>> optChoice, List<WeavingInstruction> instructions) {
 		if (optChoice == null) {
 			return;
 		}
@@ -182,8 +175,7 @@ public class WeavingInstructionGenerator {
 	 * @author Dominik Fuchss
 	 */
 	private boolean checkDelete(WeavingInstruction instruct, List<Pair<FeatureDegree, Choice>> optChoice) {
-		Feature feature = this.getViaStereoTypeFrom(instruct.getFCCWithConsumedFeatures().getFirst(), Feature.class)
-				.get(0);
+		Feature feature = this.getViaStereoTypeFrom(instruct.getFCCWithConsumedFeatures().getFirst(), Feature.class).get(0);
 		Object id = feature.getId();
 		Choice ch = null;
 		for (Pair<FeatureDegree, Choice> p : optChoice) {
@@ -211,8 +203,7 @@ public class WeavingInstructionGenerator {
 	 * @return a list of Elements found
 	 * @author Dominik Fuchss
 	 */
-	private <ElementType, Base extends EObject> List<ElementType> getViaStereoTypeFrom(Base base,
-			Class<ElementType> target) {
+	private <ElementType, Base extends EObject> List<ElementType> getViaStereoTypeFrom(Base base, Class<ElementType> target) {
 		List<ElementType> res = new ArrayList<>();
 		List<StereotypeApplication> appls = EMFProfileFilter.getStereotypeApplicationsFrom(base);
 		for (StereotypeApplication appl : appls) {
@@ -221,9 +212,8 @@ public class WeavingInstructionGenerator {
 		}
 		return res;
 	}
-	
-	private List<Pair<ComplementumVisnetis, WeavingLocation>> getWeavingLocationsFrom(
-			List<Pair<ComplementumVisnetis, EObject>> targetAnnotatedElements) throws ConcernWeavingException {
+
+	private List<Pair<ComplementumVisnetis, WeavingLocation>> getWeavingLocationsFrom(List<Pair<ComplementumVisnetis, EObject>> targetAnnotatedElements) throws ConcernWeavingException {
 		return new WeavingLocationHandler(this.pcmInstance).extractWeavingLocationsFrom(targetAnnotatedElements);
 	}
 
@@ -232,50 +222,51 @@ public class WeavingInstructionGenerator {
 	}
 
 	private List<Pair<ComplementumVisnetis, EObject>> getUncheckedComplementumVisnetisAnnotatedElementPairs(List<Repository> pcmSolutionRepository) {
-		List<Pair<ComplementumVisnetis, EObject>> resultPair = new ArrayList<Pair<ComplementumVisnetis,EObject>>();
-		for (Repository pcmRepo: pcmSolutionRepository) {
-			for (RepositoryComponent pcmSolutionRepoComponent: pcmRepo.getComponents__Repository()){
-				List<ComplementumVisnetis> solutionComponentAnnotatedComplVisnetis = StereotypeApiHelper.getViaStereoTypeFrom(pcmSolutionRepoComponent, ComplementumVisnetis.class, "fulfillsComplementumVisnetis");
-				for (ComplementumVisnetis solutionCV: solutionComponentAnnotatedComplVisnetis){
+		List<Pair<ComplementumVisnetis, EObject>> resultPair = new ArrayList<>();
+		for (Repository pcmRepo : pcmSolutionRepository) {
+			for (RepositoryComponent pcmSolutionRepoComponent : pcmRepo.getComponents__Repository()) {
+				List<ComplementumVisnetis> solutionComponentAnnotatedComplVisnetis = StereotypeAPIHelper.getViaStereoTypeFrom(pcmSolutionRepoComponent, ComplementumVisnetis.class,
+						"fulfillsComplementumVisnetis");
+				for (ComplementumVisnetis solutionCV : solutionComponentAnnotatedComplVisnetis) {
 					resultPair.add(new Pair<ComplementumVisnetis, EObject>(solutionCV, pcmSolutionRepoComponent));
 				}
 			}
-			for (Interface pcmSolutionInterface: pcmRepo.getInterfaces__Repository()){
-				if (!(pcmSolutionInterface instanceof OperationInterface))
+			for (Interface pcmSolutionInterface : pcmRepo.getInterfaces__Repository()) {
+				if (!(pcmSolutionInterface instanceof OperationInterface)) {
 					continue;
+				}
 				OperationInterface pcmSolutionOperationInterface = (OperationInterface) pcmSolutionInterface;
-				List<ComplementumVisnetis> solutionInterfaceAnnotatedComplVisnetis = StereotypeApiHelper.getViaStereoTypeFrom(pcmSolutionOperationInterface, ComplementumVisnetis.class, "fulfillsComplementumVisnetis");
-				for (ComplementumVisnetis solutionCV: solutionInterfaceAnnotatedComplVisnetis){
+				List<ComplementumVisnetis> solutionInterfaceAnnotatedComplVisnetis = StereotypeAPIHelper.getViaStereoTypeFrom(pcmSolutionOperationInterface, ComplementumVisnetis.class,
+						"fulfillsComplementumVisnetis");
+				for (ComplementumVisnetis solutionCV : solutionInterfaceAnnotatedComplVisnetis) {
 					resultPair.add(new Pair<ComplementumVisnetis, EObject>(solutionCV, pcmSolutionOperationInterface));
 				}
-				
-				for (OperationSignature pcmSolutionOperationSignature: pcmSolutionOperationInterface.getSignatures__OperationInterface()){
-					List<ComplementumVisnetis> solutionOperationSignatureAnnotatedComplVisnetis = StereotypeApiHelper.getViaStereoTypeFrom(pcmSolutionOperationSignature, ComplementumVisnetis.class, "fulfillsComplementumVisnetis");
-					for (ComplementumVisnetis solutionCV: solutionOperationSignatureAnnotatedComplVisnetis){
+
+				for (OperationSignature pcmSolutionOperationSignature : pcmSolutionOperationInterface.getSignatures__OperationInterface()) {
+					List<ComplementumVisnetis> solutionOperationSignatureAnnotatedComplVisnetis = StereotypeAPIHelper.getViaStereoTypeFrom(pcmSolutionOperationSignature, ComplementumVisnetis.class,
+							"fulfillsComplementumVisnetis");
+					for (ComplementumVisnetis solutionCV : solutionOperationSignatureAnnotatedComplVisnetis) {
 						resultPair.add(new Pair<ComplementumVisnetis, EObject>(solutionCV, pcmSolutionOperationSignature));
 					}
 				}
 			}
 		}
-		
+
 		return resultPair;
 		// return annotatedElements.map(each ->
 		// Pair.of(AnnotationFilter.getTargetAnnotationFrom(each).get(),
 		// each)).collect(Collectors.toList());
 
 	}
-	
 
-	private List<Pair<ComplementumVisnetis, EObject>> considerOnlyInstantiatedComponents(
-			List<Pair<ComplementumVisnetis, EObject>> annotatedElements) throws ConcernWeavingException {
+	private List<Pair<ComplementumVisnetis, EObject>> considerOnlyInstantiatedComponents(List<Pair<ComplementumVisnetis, EObject>> annotatedElements) throws ConcernWeavingException {
 		annotatedElements.replaceAll(this.nonInstantiatedComponents());
 		return annotatedElements;
 	}
 
 	private UnaryOperator<Pair<ComplementumVisnetis, EObject>> nonInstantiatedComponents() throws ConcernWeavingException {
 		try {
-			return pair -> this.isComponent(pair.getSecond()) ? this.getInstantiatedComponentAndCheckException(pair)
-					: pair;
+			return pair -> this.isComponent(pair.getSecond()) ? this.getInstantiatedComponentAndCheckException(pair) : pair;
 		} catch (Exception ex) {
 			throw new ConcernWeavingException(ex.getMessage());
 		}
@@ -285,8 +276,7 @@ public class WeavingInstructionGenerator {
 		return obj instanceof RepositoryComponent;
 	}
 
-	private Pair<ComplementumVisnetis, EObject> getInstantiatedComponentAndCheckException(
-			Pair<ComplementumVisnetis, EObject> pair) {
+	private Pair<ComplementumVisnetis, EObject> getInstantiatedComponentAndCheckException(Pair<ComplementumVisnetis, EObject> pair) {
 		try {
 			return Pair.of(pair.getFirst(), this.getInstantiatedComponent((RepositoryComponent) pair.getSecond()));
 		} catch (ConcernWeavingException ex) {
@@ -298,13 +288,11 @@ public class WeavingInstructionGenerator {
 		if (this.isInstantiated(component)) {
 			return component;
 		}
-		return this.getInstantiatedAlternativeOf(component)
-				.orElseThrow(() -> new ConcernWeavingException(ErrorMessage.missingInstantiation(component)));
+		return this.getInstantiatedAlternativeOf(component).orElseThrow(() -> new ConcernWeavingException(ErrorMessage.missingInstantiation(component)));
 	}
 
 	private boolean isInstantiated(EObject object) {
-		return !PcmSystemManager.getInstanceBy(this.pcmInstance.getSystem())
-				.getAssemblyContextsInstantiating((RepositoryComponent) object).isEmpty();
+		return !PcmSystemManager.getInstanceBy(this.pcmInstance.getSystem()).getAssemblyContextsInstantiating((RepositoryComponent) object).isEmpty();
 	}
 
 	private Optional<RepositoryComponent> getInstantiatedAlternativeOf(RepositoryComponent component) {
@@ -320,8 +308,7 @@ public class WeavingInstructionGenerator {
 
 	private boolean ifFunctionalEqual(RepositoryComponent component1, RepositoryComponent toTest) {
 		boolean res = this.hasSameSizeOfProvidedRoles(toTest, component1);
-		res &= this.areProvidingTheSameInterfaces(toTest.getProvidedRoles_InterfaceProvidingEntity(),
-				component1.getProvidedRoles_InterfaceProvidingEntity());
+		res &= this.areProvidingTheSameInterfaces(toTest.getProvidedRoles_InterfaceProvidingEntity(), component1.getProvidedRoles_InterfaceProvidingEntity());
 		return res;
 	}
 
@@ -332,8 +319,7 @@ public class WeavingInstructionGenerator {
 
 	}
 
-	private boolean areProvidingTheSameInterfaces(List<ProvidedRole> providedRoles1,
-			List<ProvidedRole> providedRoles2) {
+	private boolean areProvidingTheSameInterfaces(List<ProvidedRole> providedRoles1, List<ProvidedRole> providedRoles2) {
 		List<Interface> interfacesOfProvidedRoles1 = this.toInterfaces(providedRoles1);
 		List<Interface> interfacesOfProvidedRoles2 = this.toInterfaces(providedRoles2);
 
@@ -363,39 +349,35 @@ public class WeavingInstructionGenerator {
 
 	private WeavingInstruction generate(Pair<ComplementumVisnetis, WeavingLocation> pair, List<Repository> solutionRepos) {
 		try {
-			return this.generateWeavingInstructionFrom(this.getFCCWithRequiredFeaturesFrom(pair.getFirst()),
-					pair.getSecond(), solutionRepos);
+			return this.generateWeavingInstructionFrom(this.getFCCWithRequiredFeaturesFrom(pair.getFirst()), pair.getSecond(), solutionRepos);
 		} catch (ConcernWeavingException ex) {
 			throw new RuntimeException(ex);
 		}
 	}
 
-	private CompletionComponent getFCCByVisnetis(ComplementumVisnetis cv){
-		
+	private CompletionComponent getFCCByVisnetis(ComplementumVisnetis cv) {
+
 		String featureID = cv.getComplementaryFeature().getId();
-		for (CompletionComponent fccCurrent : this.fc.getCompletionComponents()){
-			for (Feature fccCurrentProvidedFeature: fccCurrent.getPerimeterProviding().getFeatureProviding()){
-				if (fccCurrentProvidedFeature.getId().equalsIgnoreCase(featureID))
+		for (CompletionComponent fccCurrent : this.fc.getCompletionComponents()) {
+			for (Feature fccCurrentProvidedFeature : fccCurrent.getPerimeterProviding().getFeatureProviding()) {
+				if (fccCurrentProvidedFeature.getId().equalsIgnoreCase(featureID)) {
 					return fccCurrent;
+				}
 			}
 		}
 		throw new ConcernWeavingException("No FCC found for Complementum Visnetis with ID " + cv.getId());
 	}
-	
-	private Pair<CompletionComponent, List<ProvidedRole>> getFCCWithRequiredFeaturesFrom(ComplementumVisnetis cv)
-	{
+
+	private Pair<CompletionComponent, List<ProvidedRole>> getFCCWithRequiredFeaturesFrom(ComplementumVisnetis cv) {
 		CompletionComponent fcc = this.getFCCByVisnetis(cv);
 		return Pair.of(fcc, this.featureHandler.getProvidedFeaturesOf(fcc));
 	}
-	
-	private WeavingInstruction generateWeavingInstructionFrom(
-			Pair<CompletionComponent, List<ProvidedRole>> fccWithRequiredFeatures,
-			WeavingLocation weavingLocation, List<Repository> solutionRepos) throws ConcernWeavingException {
 
-		return new WeavingInstructionBuilder().setECCWithConsumedFeatures(fccWithRequiredFeatures)
-				.setResourceContainer(this.getResourceContainerFrom(fccWithRequiredFeatures.getFirst()))
-				.setTransformationStrategy(this.getTransformationStrategy(solutionRepos))
-				.setWeavingLocation(weavingLocation).build();
+	private WeavingInstruction generateWeavingInstructionFrom(Pair<CompletionComponent, List<ProvidedRole>> fccWithRequiredFeatures, WeavingLocation weavingLocation, List<Repository> solutionRepos)
+			throws ConcernWeavingException {
+
+		return new WeavingInstructionBuilder().setECCWithConsumedFeatures(fccWithRequiredFeatures).setResourceContainer(this.getResourceContainerFrom(fccWithRequiredFeatures.getFirst()))
+				.setTransformationStrategy(this.getTransformationStrategy(solutionRepos)).setWeavingLocation(weavingLocation).build();
 
 	}
 
@@ -415,30 +397,29 @@ public class WeavingInstructionGenerator {
 
 	private InclusionMechanism getTransformationStrategy(List<Repository> solutionRepos) throws ConcernWeavingException {
 		InclusionMechanism inclusionMechanism = null;
-		for (Repository solutionRepo: solutionRepos){
-			for (InclusionMechanism currentMechanism: StereotypeApiHelper.getViaStereoTypeFrom(solutionRepo, InclusionMechanism.class))
-				if (inclusionMechanism != null && !inclusionMechanism.getId().equalsIgnoreCase(currentMechanism.getId()))
+		for (Repository solutionRepo : solutionRepos) {
+			for (InclusionMechanism currentMechanism : StereotypeAPIHelper.getViaStereoTypeFrom(solutionRepo, InclusionMechanism.class)) {
+				if (inclusionMechanism != null && !inclusionMechanism.getId().equalsIgnoreCase(currentMechanism.getId())) {
 					throw new ConcernWeavingException("Multiple InclusionMechanisms currently not supported");
-				else
+				} else {
 					inclusionMechanism = currentMechanism;
+				}
+			}
 		}
 		return inclusionMechanism;
 	}
 
 	private ResourceContainer getResourceContainerFrom(CompletionComponent fcc) {
-		return this.eccToResourceContainerMap.keySet().contains(fcc) ? this.eccToResourceContainerMap.get(fcc)
-				: this.getRandomResourceContainer();
+		return this.eccToResourceContainerMap.keySet().contains(fcc) ? this.eccToResourceContainerMap.get(fcc) : this.getRandomResourceContainer();
 	}
 
 	private ResourceContainer getRandomResourceContainer() {
 		int bound = this.pcmInstance.getResourceEnvironment().getResourceContainer_ResourceEnvironment().size();
-		return this.pcmInstance.getResourceEnvironment().getResourceContainer_ResourceEnvironment()
-				.get(this.getRandomIndex(bound));
+		return this.pcmInstance.getResourceEnvironment().getResourceContainer_ResourceEnvironment().get(this.getRandomIndex(bound));
 	}
 
 	private int getRandomIndex(int bound) {
 		return new Random(java.lang.System.currentTimeMillis()).nextInt(--bound);
 	}
-
 
 }
